Changed index.html location and made minor changes

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
         p { color: #fff; }
     </style>
 
-<a href="index.html"><img src="logo.png" alt=""></a><a href="users.html"><img src="usersButton.png" alt=""></a><a href="functionality.html"><img src="functionalityButton.png" alt=""></a><a href="sales.html"><img src="salesPitchButton.png" alt=""></a><a href="contributors.html"><img src="contributorsButton.png" alt=""></a>
-<img src="featured.png" alt="">
+<a href="index.html"><img src="website/logo.png" alt=""></a><a href="website/users.html"><img src="website/usersButton.png" alt=""></a><a href="website/functionality.html"><img src="website/functionalityButton.png" alt=""></a><a href="website/sales.html"><img src="website/salesPitchButton.png" alt=""></a><a href="website/contributors.html"><img src="website/contributorsButton.png" alt=""></a>
+<img src="website/featured.png" alt="">
 <br><br>
 <font face = "Verdana" size = "5">What is the Bookstore App?</font>
 <br><br>
@@ -15,7 +15,7 @@
     <td style="text-align:left; font-family:Verdana">A new and exciting way to visit your favourite bookstore from anywhere. The Bookstore app is a virtual trip to the bookstore. You can browse, check prices, reserve books, and a lot more. Download it on the Android Play store today!</td>
   </tr>
   <tr>
-    <td style="width:480px;"><img src="Open-Book.jpg" style="max-width:100%"></td>
+    <td style="width:480px;"><img src="website/Open-Book.jpg" style="max-width:100%"></td>
   </tr>
 </thead>
 </table>
@@ -70,7 +70,7 @@ Stop Doing?
 <table>
 <thead>
   <tr>
-    <th><img src="Velocity.png" style="width=400px"></th>
+    <th><img src="website/Velocity.png" style="width=400px"></th>
     <td>
 Iteration 1:
 We overestimated our velocity as we were ambitious on envisioning how the project would go. We implemented logic for most planned features and have the overall structure organized, but without including the time we need to get familiar with the coding environment, we ultimately were not able to meet our original expectation.
