Folder paths changed for all .html files

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         p { color: #fff; }
     </style>
 
-<a href="index.html"><img src="website/logo.png" alt=""></a><a href="website/users.html"><img src="website/usersButton.png" alt=""></a><a href="website/functionality.html"><img src="website/functionalityButton.png" alt=""></a><a href="website/sales.html"><img src="website/salesPitchButton.png" alt=""></a><a href="website/contributors.html"><img src="website/contributorsButton.png" alt=""></a>
+<a href="/index.html"><img src="website/logo.png" alt=""></a><a href="website/users.html"><img src="website/usersButton.png" alt=""></a><a href="website/functionality.html"><img src="website/functionalityButton.png" alt=""></a><a href="website/sales.html"><img src="website/salesPitchButton.png" alt=""></a><a href="website/contributors.html"><img src="website/contributorsButton.png" alt=""></a>
 <img src="website/featured.png" alt="">
 <br><br>
 <font face = "Verdana" size = "5">What is the Bookstore App?</font>
