--- a/website/sales.html
+++ b/website/sales.html
@@ -5,8 +5,8 @@
         body { width:960px; margin:0 auto;}
         p { color: #fff; }
     </style></p>
-<p><a href="/index.html"><img src="logo.png" alt=""></a><a href="users.html"><img src="usersButton.png" alt=""></a><a href="functionality.html"><img src="functionalityButton.png" alt=""></a><a href="sales.html"><img src="salesPitchButton.png" alt=""></a><a href="contributors.html"><img src="contributorsButton.png" alt=""></a>
-<img src="featured.png" alt="">
+<p><a href="/index.html"><img src="logo.PNG" alt=""></a><a href="users.html"><img src="usersButton.png" alt=""></a><a href="functionality.html"><img src="functionalityButton.png" alt=""></a><a href="sales.html"><img src="salesPitchButton.png" alt=""></a><a href="contributors.html"><img src="contributorsButton.png" alt=""></a>
+<img src="featured.PNG" alt="">
 <br><br>
 <img src="pitch.png" alt=""></p>
 </body></html>
