Updated folder paths in all .html files

--- a/website/contributors.html
+++ b/website/contributors.html
@@ -5,7 +5,7 @@
         body { width:960px; margin:0 auto;}
         p { color: #fff; }
     </style></p>
-<p><a href="/index.html"><img src="logo.PNG" alt=""></a><a href="users.html"><img src="usersButton.png" alt=""></a><a href="functionality.html"><img src="functionalityButton.png" alt=""></a><a href="sales.html"><img src="salesPitchButton.png" alt=""></a><a href="contributors.html"><img src="contributorsButton.png" alt=""></a>
+<p><a href="BookStore-App/index.html"><img src="logo.PNG" alt=""></a><a href="users.html"><img src="usersButton.png" alt=""></a><a href="functionality.html"><img src="functionalityButton.png" alt=""></a><a href="sales.html"><img src="salesPitchButton.png" alt=""></a><a href="contributors.html"><img src="contributorsButton.png" alt=""></a>
 <img src="featured.PNG" alt="">
 <br><br></p>
 <font face = "Verdana" size = "5" color = "black">Who made it?</font>
